group 'org.mbari.m3'
version '0.0.1-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'application'

sourceCompatibility = 1.9
mainClassName = 'org.mbari.m3.annosync.Main'

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    compile 'com.google.code.gson:gson:2.8.2'
    compile 'com.rabbitmq:amqp-client:5.1.2'
    compile 'com.typesafe:config:1.3.2'
    compile 'io.reactivex.rxjava2:rxjava:2.1.9'
    compile 'org.glassfish.jersey.core:jersey-client:2.25.1'
    compile 'org.slf4j:slf4j-api:1.8.0-beta1'
    runtime 'org.slf4j:slf4j-simple:1.8.0-beta1'
    runtime 'javax.xml.bind:jaxb-api:2.3.0'
    runtime 'com.sun.xml.bind:jaxb-impl:2.3.0'
    runtime 'org.glassfish.jaxb:jaxb-runtime:2.3.0'
    runtime 'javax.activation:activation:1.1.1'
    testCompile 'junit:junit:4.12'
    runtime 'org.apache.derby:derbyclient:10.14.1.0'
    runtime 'org.apache.derby:derbynet:10.14.1.0'
    runtime 'org.apache.derby:derby:10.14.1.0'
    testRuntime 'net.sourceforge.jtds:jtds:1.3.1'
}



jar {
    manifest {
        attributes 'Main-Class': 'org.mbari.m3.annosync.App'
    }
}

task wrapper(type: Wrapper) {
    gradleVersion = '4.4.1'
}

task createStartScripts

def java_home = System.getenv('JAVA_HOME')
task link(type: Exec) {
    dependsOn 'clean'
    dependsOn 'jar'

    workingDir 'build'

    commandLine "${java_home}/bin/jlink",
            '--module-path', "libs${File.pathSeparatorChar}${java_home}/jmods",
            '--add-modules', 'org.mbari.m3.annosync',
            '--launcher', "annosync=org.mbari.m3.annosync/${mainClassName}",
            '--output', 'dist',
            '--strip-debug',
            '--compress', '2',
            '--no-header-files',
            '--no-man-pages'
}

